--- a/FaithConnect/Web.config
+++ b/FaithConnect/Web.config
@@ -26,7 +26,7 @@
     <!--RoleManager-->
     <roleManager defaultProvider="Roles" enabled="true">
       <providers>
-        <add name="MyRole" type="FaithConnect.Utils.Roles" />
+        <add name="Roles" type="FaithConnect.Utils.Roles" />
       </providers>
     </roleManager>
     <!--Authentication-->
