--- a/FaithConnect/FaithConnect.csproj
+++ b/FaithConnect/FaithConnect.csproj
@@ -124,6 +124,23 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Assets\Index\css\main.css" />
+    <Content Include="Assets\Index\img\default.png" />
+    <Content Include="Assets\Index\js\main.js" />
+    <Content Include="Assets\login\css\animate.css" />
+    <Content Include="Assets\login\css\bootstrap-grid.min.css" />
+    <Content Include="Assets\login\css\bootstrap-reboot.min.css" />
+    <Content Include="Assets\login\css\bootstrap.min.css" />
+    <Content Include="Assets\login\css\jarallax.css" />
+    <Content Include="Assets\login\css\mbr-additional.css" />
+    <Content Include="Assets\login\css\style.css" />
+    <Content Include="Assets\login\css\style2.css" />
+    <Content Include="Assets\login\img\Logo.ico" />
+    <Content Include="Assets\login\img\Logo.png" />
+    <Content Include="Assets\signup\css\style.css" />
+    <Content Include="Content\bootstrap.css" />
+    <Content Include="Content\bootstrap.min.css" />
+    <Content Include="Content\Site.css" />
     <Content Include="FaithConnect.Context.tt">
       <Generator>TextTemplatingFileGenerator</Generator>
       <DependentUpon>FaithConnect.edmx</DependentUpon>
@@ -134,10 +151,19 @@
       <DependentUpon>FaithConnect.edmx</DependentUpon>
       <LastGenOutput>FaithConnect.cs</LastGenOutput>
     </Content>
+    <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
     <Content Include="scripts\ai.0.22.9-build00167.js" />
     <Content Include="scripts\ai.0.22.9-build00167.min.js" />
-    <Content Include="Web.config" />
+    <Content Include="scripts\bootstrap.js" />
+    <Content Include="scripts\bootstrap.min.js" />
+    <None Include="scripts\jquery-1.10.2.intellisense.js" />
+    <Content Include="scripts\jquery-1.10.2.js" />
+    <Content Include="scripts\jquery-1.10.2.min.js" />
+    <Content Include="scripts\modernizr-2.6.2.js" />
+    <Content Include="Web.config">
+      <SubType>Designer</SubType>
+    </Content>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="App_Start\RouteConfig.cs" />
@@ -161,6 +187,7 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Models\UserLogged.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repository\AccountManager.cs" />
     <Compile Include="Repository\BaseRepository.cs" />
@@ -194,6 +221,15 @@
     <Content Include="FaithConnect.edmx.diagram">
       <DependentUpon>FaithConnect.edmx</DependentUpon>
     </Content>
+    <Content Include="Views\_ViewStart.cshtml" />
+    <Content Include="Views\Shared\_Layout.cshtml" />
+    <Content Include="fonts\glyphicons-halflings-regular.woff" />
+    <Content Include="fonts\glyphicons-halflings-regular.ttf" />
+    <Content Include="fonts\glyphicons-halflings-regular.eot" />
+    <Content Include="scripts\jquery-1.10.2.min.map" />
+    <Content Include="Views\Home\Login.cshtml" />
+    <Content Include="Views\Home\Index.cshtml" />
+    <Content Include="Views\Home\MyProfile.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
@@ -203,9 +239,9 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
-    <Folder Include="Models\" />
+    <Folder Include="Assets\login\js\" />
+    <Folder Include="Assets\signup\js\" />
     <Folder Include="Views\Base\" />
-    <Folder Include="Views\Home\" />
   </ItemGroup>
   <ItemGroup>
     <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
