--- a/FaithConnect/FaithConnect.csproj
+++ b/FaithConnect/FaithConnect.csproj
@@ -125,6 +125,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Assets\Index\css\main.css" />
+    <Content Include="Assets\signup\js\address.js" />
     <Content Include="UploadedFiles\default.png" />
     <Content Include="Assets\Index\js\main.js" />
     <Content Include="Assets\login\css\animate.css" />
@@ -196,11 +197,15 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Image.cs">
+      <DependentUpon>FaithConnect.tt</DependentUpon>
+    </Compile>
     <Compile Include="Models\UserLogged.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repository\AccountManager.cs" />
     <Compile Include="Repository\BaseRepository.cs" />
     <Compile Include="Repository\IBaseRepository.cs" />
+    <Compile Include="Repository\ImageManager.cs" />
     <Compile Include="Repository\MailManager.cs" />
     <Compile Include="Role.cs">
       <DependentUpon>FaithConnect.tt</DependentUpon>
@@ -258,7 +263,6 @@
     <Folder Include="App_Data\" />
     <Folder Include="Assets\Index\img\" />
     <Folder Include="Assets\login\js\" />
-    <Folder Include="Assets\signup\js\" />
     <Folder Include="Views\Base\" />
   </ItemGroup>
   <ItemGroup>
