--- a/FaithConnect/FaithConnect.csproj
+++ b/FaithConnect/FaithConnect.csproj
@@ -125,6 +125,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Assets\Index\css\main.css" />
+    <Content Include="Assets\Index\css\style1.css" />
     <Content Include="Assets\signup\css\style2.css" />
     <Content Include="Assets\signup\js\address.js" />
     <Content Include="Assets\signup\js\preview.js" />
