--- a/FaithConnect/FaithConnect.csproj
+++ b/FaithConnect/FaithConnect.csproj
@@ -174,6 +174,7 @@
     <Compile Include="Content.cs">
       <DependentUpon>FaithConnect.tt</DependentUpon>
     </Compile>
+    <Compile Include="Controllers\AdminController.cs" />
     <Compile Include="Controllers\BaseController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Event.cs">
@@ -266,6 +267,7 @@
     <Folder Include="App_Data\" />
     <Folder Include="Assets\Index\img\" />
     <Folder Include="Assets\login\js\" />
+    <Folder Include="Views\Admin\" />
     <Folder Include="Views\Base\" />
   </ItemGroup>
   <ItemGroup>
