--- a/FaithConnect/Web.config
+++ b/FaithConnect/Web.config
@@ -68,7 +68,7 @@
     </modules>
   </system.webServer>
   <connectionStrings>
-    <add name="FaithConnectEntities" connectionString="metadata=res://*/FaithConnect.csdl|res://*/FaithConnect.ssdl|res://*/FaithConnect.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=BOGART\SQLEXPRESS;initial catalog=FaithConnect;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="FaithConnectEntities" connectionString="metadata=res://*/FaithConnect.csdl|res://*/FaithConnect.ssdl|res://*/FaithConnect.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=LAPTOP-KKVDTS0I;initial catalog=master;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework" />
