--- a/FaithConnect/FaithConnect.csproj
+++ b/FaithConnect/FaithConnect.csproj
@@ -256,6 +256,7 @@
     <Content Include="Views\Home\MyProfile.cshtml" />
     <Content Include="Views\Home\Signup.cshtml" />
     <Content Include="Views\Home\Verify.cshtml" />
+    <Content Include="Views\Home\Group.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
