--- a/FaithConnect/FaithConnect.csproj
+++ b/FaithConnect/FaithConnect.csproj
@@ -446,6 +446,7 @@
     <Content Include="Assets\Admin\js\plugin\webfont\webfont.min.js" />
     <Content Include="Assets\Admin\js\setting-demo.js" />
     <Content Include="Assets\Admin\js\setting-demo2.js" />
+    <Content Include="Assets\Groups\css\GroupDetail.css" />
     <Content Include="Assets\Groups\css\StyleGroup.css" />
     <Content Include="Assets\Groups\js\group.js" />
     <Content Include="Assets\Index\css\main.css" />
@@ -559,10 +560,13 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repository\AccountManager.cs" />
     <Compile Include="Repository\BaseRepository.cs" />
+    <Compile Include="Repository\EventManager.cs" />
+    <Compile Include="Repository\ForumManager.cs" />
     <Compile Include="Repository\GroupManager.cs" />
     <Compile Include="Repository\IBaseRepository.cs" />
     <Compile Include="Repository\ImageManager.cs" />
     <Compile Include="Repository\MailManager.cs" />
+    <Compile Include="Repository\PostManager.cs" />
     <Compile Include="Role.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
@@ -578,6 +582,7 @@
     <Compile Include="UserInformation.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
+    <Compile Include="ViewModel\GroupDetailViewModel.cs" />
     <Compile Include="ViewModel\GroupViewModel.cs" />
     <Compile Include="ViewModel\ManageAccountViewModel.cs" />
     <Compile Include="Utils\Roles.cs" />
@@ -610,6 +615,7 @@
     <Content Include="Views\Admin\Approval.cshtml" />
     <Content Include="Views\Admin\AdminDashboard.cshtml" />
     <Content Include="Views\Admin\ManageGroups.cshtml" />
+    <Content Include="Views\Home\GroupDetail.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
