--- a/FaithConnect/Web.config
+++ b/FaithConnect/Web.config
@@ -15,7 +15,7 @@
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
     <!--add email address here-->
     <add key="MailSender" value="faithconnect24@gmail.com" />
-    <add key="MailSenderAppPassword" value="jkaigahyhbwsswzm" />
+    <add key="MailSenderAppPassword" value="svezurfphuwjfzte" />
   </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.5.2" />
@@ -68,7 +68,7 @@
     </modules>
   </system.webServer>
   <connectionStrings>
-  <add name="FaithConnectEntities" connectionString="metadata=res://*/Model1.csdl|res://*/Model1.ssdl|res://*/Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=BOGART\SQLEXPRESS;initial catalog=FaithConnect;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings>
+  <add name="FaithConnectEntities" connectionString="metadata=res://*/Model1.csdl|res://*/Model1.ssdl|res://*/Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=MARVIN\SQLEXPRESS;initial catalog=FaithConnect;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework" />
   </entityFramework>
