--- a/FaithConnect/Web.config
+++ b/FaithConnect/Web.config
@@ -70,5 +70,13 @@
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework" />
   </entityFramework>
+  
+  
+  <!--Connection String Somme Database-->
+  <!--<connectionStrings>
+    <add name="FaithConnectEntities" connectionString="metadata=res://*/Model1.csdl|res://*/Model1.ssdl|res://*/Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;
+workstation id=FaithConnectDbase.mssql.somee.com;packet size=4096;user id=FaithConnects_SQLLogin_3;pwd=f6z7gnigrn;data source=FaithConnectDbase.mssql.somee.com;persist security info=False;initial catalog=FaithConnectDbase;TrustServerCertificate=True&quot;" providerName="System.Data.EntityClient" />
+  </connectionStrings>-->
 
-<connectionStrings><add name="FaithConnectEntities" connectionString="metadata=res://*/Model1.csdl|res://*/Model1.ssdl|res://*/Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=MARVIN\SQLEXPRESS;initial catalog=FaithConnect;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings></configuration>
+
+  <connectionStrings><add name="FaithConnectEntities" connectionString="metadata=res://*/Model1.csdl|res://*/Model1.ssdl|res://*/Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=MARVIN\SQLEXPRESS;initial catalog=FaithConnect;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings></configuration>
