--- a/FaithConnect/FaithConnect.csproj
+++ b/FaithConnect/FaithConnect.csproj
@@ -453,6 +453,7 @@
     <Content Include="Assets\Index\css\main.css" />
     <Content Include="Assets\Index\css\style1.css" />
     <Content Include="Assets\Index\css\Style2.css" />
+    <Content Include="Assets\Index\css\tooltip.css" />
     <Content Include="Assets\Index\img\calendar.png" />
     <Content Include="Assets\signup\css\style2.css" />
     <Content Include="Assets\signup\js\address.js" />
@@ -534,6 +535,9 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="GroupImage.cs">
+      <DependentUpon>Model1.tt</DependentUpon>
+    </Compile>
     <Compile Include="GroupMembership.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
@@ -562,6 +566,9 @@
       <DependentUpon>Model1.edmx</DependentUpon>
     </Compile>
     <Compile Include="Models\UserLogged.cs" />
+    <Compile Include="Notification.cs">
+      <DependentUpon>Model1.tt</DependentUpon>
+    </Compile>
     <Compile Include="Post.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
@@ -581,6 +588,7 @@
     <Compile Include="Repository\IBaseRepository.cs" />
     <Compile Include="Repository\ImageManager.cs" />
     <Compile Include="Repository\MailManager.cs" />
+    <Compile Include="Repository\NotificationManager.cs" />
     <Compile Include="Repository\PostManager.cs" />
     <Compile Include="Repository\TagsManager.cs" />
     <Compile Include="Role.cs">
@@ -603,6 +611,7 @@
     <Compile Include="ViewModel\ManageAccountViewModel.cs" />
     <Compile Include="Utils\Roles.cs" />
     <Compile Include="Utils\Utilities.cs" />
+    <Compile Include="ViewModel\notificationViewModel.cs" />
     <Compile Include="vw_Role.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
