--- a/FaithConnect/Web.config
+++ b/FaithConnect/Web.config
@@ -15,7 +15,7 @@
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
     <!--add email address here-->
     <add key="MailSender" value="faithconnect24@gmail.com" />
-    <add key="MailSenderAppPassword" value="svezurfphuwjfzte" />
+    <add key="MailSenderAppPassword" value="wqyfqotrmypwbnde" />
   </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.5.2" />
