--- a/FaithConnect/Web.config
+++ b/FaithConnect/Web.config
@@ -34,7 +34,7 @@
       <forms loginUrl="Home/Login" />
     </authentication>
     <!--Custom error 404-->
-    <customErrors mode="RemoteOnly">
+    <customErrors mode="Off">
       <error statusCode="404" redirect="Home/PageNotFound" />
     </customErrors>
   </system.web>
